<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_by_project">Groupées par projet</string>
    <string name="sort_oldest_first">Les plus anciennes d’abord</string>
    <string name="sort_recent_first">Les plus récentes d’abord</string>

    <string name="add_task">Ajouter une tâche</string>
    <string name="add">Ajouter</string>

    <string name="edit_task">Modifier une tâche</string>
    <string name="edit">Modifier</string>

    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>
    <string name="task_deleted_snk">Tâche supprimée</string>
    <string name="undo_snk">ANNULER</string>
</resources>
