<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_no_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_task"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone"
        app:drawableTopCompat="@drawable/ic_work_off" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        android:layoutAnimation="@anim/layout_animation"
        tools:itemCount="5"
        android:background="@color/ripple_color"
        tools:listitem="@layout/item_task" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/add_task"
        app:srcCompat="@drawable/ic_add"
        app:tint="@null" />
</androidx.constraintlayout.widget.ConstraintLayout>